# hitman

./: .gitignore  README.md  docker-compose.yml  docker-compose.yml.linux  pytest.ini  requirements.txt  setup.cfg
hitman/: Makefile  __init__.py  __main__.py  bert_model_exporter.py  kk.py  model_exporter.py  model_exporter_torchscript.py  tensorrt_test.py  torch_serve_handler.py
hitman/client/: config.py  hitman.py
hitman/server/: __init__.py
hitman/server/flask/: __init__.py  config.py  flask_serving.py  preprocessing.py
hitman/server/quart/: __init__.py  config.py  quart_serving.py
hitman/utils/: __init__.py  chron.py  log.py  mp.py
resources/: config.pbtxt  config.pbtxt.onnx  config.properties  examples.tsv  prometheus.yml  prometheus.yml.linux
tests/: context.py  data  test_ preprocessing.py  test_preprocessing.py
