[metadata]
name = hitman
author = Francisco Perez-Sorrosal
version = 0.0.1
description = My package description
long_description = file: README.md
keywords = performance, workload, ml
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    aiohttp
    aiomultiprocess
    ansible
    click
    environs
    flask
    onnxruntime
    prometheus_client
    quart
    ratelimiter == 1.2.0.post0
    requests
    transformers
    torchserve
    torch-model-archiver
    winmltools

[options.entry_points]
console_scripts =
    hitman_cli=hitman.__main__:hitman_cli
    bert_model_exporter=hitman.bert_model_exporter:exporter_cli

[flake8]
exclude =
    .git,
    __pycache__,
    .pytest_cache,
    venv

ignore =
# Put Error/Style codes here e.g. H301

max-line-length = 160
max-complexity = 10

[bandit]
targets : blueprint

[coverage:run]
branch = True
omit =
    */__main__.py
    */tests/*
    */venv/*

[coverage:report]
exclude_lines =
    pragma: no cover
    if __name__ == .__main__.:

[coverage:html]
directory = reports

[pylint]
# config...